updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -213,8 +213,11 @@ dmypy.json
 cython_debug/
 
 # CMS_NBI_CLIENT CONFIG FILE
-*/cms_nbi_config.json
+cms_nbi_config.json
 /.vs/ProjectSettings.json
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
 /.vs/CMS-NBI-Client
+/test/dev_test.py
+/test/prod_test.py
+/cms_nbi_config.json
