updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -213,13 +213,9 @@ dmypy.json
 cython_debug/
 
 # CMS_NBI_CLIENT CONFIG FILE
-cms_nbi_config.json
 /.vs/ProjectSettings.json
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
 /.vs/CMS-NBI-Client
-/localtest/dev_test.py
-/localtest/prod_test.py
-/cms_nbi_config.json
-/localtest/dev_test.py
 /.vs/tasks.vs.json
+/localtest/
